# dendrite-ml-stuff

./: .gitignore  README.md  pyproject.toml
experiments/: bench.py  nanogpt_dendritic.py  phase0.py  phase0_protected.py  probe_orth_s3.py  run_boolean.py  run_continual.py  run_lm.py  run_pmnist.py  run_ssm.py  run_streaming_modk.py  run_streaming_parity.py  run_streaming_s3.py  run_temporal_boolean.py
src/: blocks.py  cl_metrics.py  counting.py  mnist.py  phase0_data.py  results_store.py  seq_tagger.py  ssm.py  streaming_sweep.py  tasks.py  train.py
